<resources>
    <string name="app_name">LoginAndSignUp</string>
    <string name="type_your_name">Type your Name</string>
    <string name="type_your_reg_no">Type your Reg no</string>
    <string name="type_your_email">Type your Email</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="sign_in">Sign In</string>
    <string name="announcemet">announcemet</string>
    <string name="addcomments">addcomments</string>
    <string name="uploadslip">uploadslip</string>
    <string name="registerroom">RegisterRoom</string>
    <string name="viewannouncemet" />
</resources>