<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hostel"
    tools:context=".SignUpActivity">


    <TextView
        android:id="@+id/textViewSINGNUP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Sign Up !"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="213dp"
        tools:ignore="HardcodedText,MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        style="@style/LoginTextInputOuterFieldStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="268dp"
        app:boxStrokeColor="@color/purple_200"
        app:hintTextColor="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEt"
            style="@style/LoginTextInputInnerFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_your_name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reg_noLayout"
        style="@style/LoginTextInputOuterFieldStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="332dp"
        app:boxStrokeColor="@color/purple_200"
        app:hintTextColor="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reg_noEt"
            style="@style/LoginTextInputInnerFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_your_reg_no"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/LoginTextInputOuterFieldStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="396dp"
        app:boxStrokeColor="@color/purple_200"
        app:hintTextColor="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEt"
            style="@style/LoginTextInputInnerFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_your_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/LoginTextInputOuterFieldStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:boxStrokeColor="@color/purple_200"
        app:hintTextColor="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passET"
            style="@style/LoginTextInputInnerFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/type_your_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="140dp"
        android:background="@color/purple_200"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already Registered , Sign In !"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.454"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>