<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hostel"
    tools:context=".SignUpActivity">


    <TextView
        android:id="@+id/textViewWelcom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Welcome !"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="211dp" />








    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="328dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="fitCenter"
        android:src="@drawable/room_reg"
        android:contentDescription="@string/registerroom"
        />

    <TextView
        android:id="@+id/textRoomReg"
        android:layout_width="156dp"
        android:layout_height="36dp"
        android:layout_marginBottom="292dp"
        android:scaleType="fitCenter"
        android:text=" Register Room"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,TextSizeCheck" />









    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="328dp"
        android:contentDescription="@string/uploadslip"
        android:scaleType="fitCenter"
        android:src="@drawable/upload_slip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.81"
        app:layout_constraintStart_toStartOf="parent"
         />


    <TextView
        android:id="@+id/textUploadSlip"
        android:layout_width="156dp"
        android:layout_height="36dp"
        android:layout_marginBottom="292dp"
        android:scaleType="fitCenter"
        android:text=" Upload Slip"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,TextSizeCheck" />







    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="144dp"
        android:scaleType="fitCenter"
        android:src="@drawable/addcomments"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/addcomments"
        />


    <TextView
        android:id="@+id/textAddComments"
        android:layout_width="156dp"
        android:layout_height="36dp"
        android:layout_marginBottom="108dp"
        android:scaleType="fitCenter"
        android:text=" Add Comments"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,TextSizeCheck" />


    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="144dp"
        android:scaleType="fitCenter"
        android:src="@drawable/announcement"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/announcemet" />


    <TextView
        android:id="@+id/textViewAnnouncements"
        android:layout_width="156dp"
        android:layout_height="36dp"
        android:layout_marginBottom="108dp"
        android:scaleType="fitCenter"
        android:text=" Announcements"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="HardcodedText,TextSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>